@@ -130,6 +130,7 @@ command-error-level-too-low=You can not set level lower than the calculated leve
 command-error-ffa-max-level=Free for all is only compatible with max enemy level 5 or 10. Please change it in startup setting.
 
 message-incoming-precision-attack=Detected incoming precision strike by __1__ at __2__
+
 [gui]
 hide-enemy-stats=Hide Enemy Race Stats
 show-enemy-stats=Show Enemy Race Stats
@@ -161,6 +162,9 @@ replace_enemy=Replace Enemy
 replace_enemy_tooltip=Replace enemy on the current surface/planet with this race.  It may lag the game during the replacement process.
 setting_description=The following settings require confirm to apply
 action_description=The following settings apply immediately
+
+clean_idle_biter=Clean Idle Biter
+clean_idle_biter_tooltip=Remove wandering biter that does not belong to a group or spawner. Having too many of them may have performance implication.
 
 [modifier-description]
 artillery-shell-damage-bonus=Artillery Shell Damage: +__1__
