@@ -127,6 +127,7 @@ function makeLogisticRobot(level)
     robot['localised_name'] = { 'entity-name.' .. MOD_NAME .. '/' .. robot['name'], level }
     robot['name'] = MOD_NAME .. '/' .. robot['name'] .. '/' .. level
     robot["subgroup"] = "erm-dropship-enemies"
+    robot['has_belt_immunity'] = true
     robot['max_health'] = ERM_UnitHelper.get_health(original_health, original_health * max_hitpoint_multiplier, health_multiplier, level)
     robot['resistances'] = {
         { type = "acid", percent = ERM_UnitHelper.get_resistance(base_acid_resistance, incremental_acid_resistance, resistance_mutiplier, level) },
